Cmdline: - converted repeated Strings into final constants. - changes to style to better adhere to the CPAchecker's StyleGuide. - avoided shorthand if-then-else. - expanded `--help` argument. - only one `(check-sat)` is supported per smt2 file. Assertions after it are rejected. Text outside any command is rejected. `push`, `pop`, `reset` are rejected. - redirect the launchers JVM-probe failure messages to stderr. - exit code 1 if the result could not be written to stdout. - an `InvalidPathException` in `CmdLineArguments` and `JavaSMTMain` was previously not handled. - added some tests and a cleanup of `testMainReportsUnknownWhenTerminated()`. Using `assertThrows` instead of `expected`. - added static analysis hints to the package-info.